test/cases/compile_errors/attempt_to_cast_enum_literal_to_error.zig
export fn entry() void {
    switch (error.Hi) {
        .Hi => {},
    }
}

// error
//
// :3:10: error: expected type 'error{Hi}', found '@Type(.enum_literal)'
